--- a/.env
+++ b/.env
@@ -39,3 +39,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+WEATHER_API_KEY=83a848fc0101482ebcb120345251205
